force-app/main/default/objects/tdc_tsw__Survey__c/fields/tdc_tsw__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>