force-app/main/default/objects/tdc_tsw__Survey__c/fields/tdc_tsw__Keywords__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Keywords__c</fullName>
    <inlineHelpText>Initiates the survey automatically when a message containing any of the keywords is received. You can provide multiple keywords with ‘||’ separated values eg START || TRY etc.</inlineHelpText>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>