force-app/main/default/objects/tdc_tsw__Survey__c/fields/tdc_tsw__Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>