force-app/main/default/objects/tdc_tsw__Survey__c/fields/tdc_tsw__TestDateTime__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__TestDateTime__c</fullName>
    <label>TestDateTime</label>
    <type>DateTime</type>
</CustomField>